# GitStat

./: .gitmodules  CMakeLists.txt
gitstat_tests/: BasicTestCases.cpp  CMakeLists.txt
libgitstat/: CMakeLists.txt  Library.cpp  Library.h  Object.cpp  Object.h  Repo.cpp  Repo.h
